--- a/app/src/main/res/layout/cycle_list_item.xml
+++ b/app/src/main/res/layout/cycle_list_item.xml
@@ -54,9 +54,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentEnd="true"
-                    android:src="@drawable/ic_expand_more">
-
-                </ImageView>
+                    android:src="@drawable/ic_expand_more" />
 
             </RelativeLayout>
 
