--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -122,6 +122,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/cancelBtn"
                 android:text="@string/cancel_edit"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -129,6 +130,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/saveBtn"
                 android:text="@string/profile_save"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -240,7 +242,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:backgroundTint="@color/primaryTextColor"/>
+            android:backgroundTint="@color/primaryTextColor"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
 
