--- a/app/src/main/res/layout/url_layout.xml
+++ b/app/src/main/res/layout/url_layout.xml
@@ -32,7 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="play"
+        android:text="@string/play"
+        android:textColor="@color/white"
         >
 
     </com.google.android.material.button.MaterialButton>
