--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,4 +11,6 @@
     <color name="itemTextColor">#000</color>
     <color name="logoutColor">#F44336</color>
     <color name="boxColor">#937AB6</color>
+    <color name="titleColor">#DDDDDD</color>
+
 </resources>
