trabajando con themes

--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -184,7 +184,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_size="mini"
-                fab:fab_label="Detailed"
+                fab:fab_label="@string/detailed"
                 android:tint="@color/highlightColor"
                 fab:menu_colorNormal="@color/highlightColor"
                 android:src="@drawable/ic_fab_normal"/>
@@ -194,7 +194,7 @@
                 android:layout_height="wrap_content"
                 fab:menu_colorNormal="@color/highlightColor"
                 fab:fab_size="mini"
-                fab:fab_label="Queue"
+                fab:fab_label="@string/queue"
                 android:tint="@color/highlightColor"
                 android:src="@drawable/ic_fab_queue"/>
         </com.github.clans.fab.FloatingActionMenu>
