--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,8 +3,8 @@
     <color name="whiteTextColor">#fff</color>
     <color name="white">#fff</color>
     <color name="hintColor">#636060</color>
-    <color name="primaryTextColor">#11CFC5</color>
-    <color name="secondaryTextColor">#FF6200EE</color>
+    <color name="primaryTextColor">#CD11CFC5</color>
+    <color name="secondaryTextColor">#8038E6</color>
     <color name="highlightColor">#FFBB86FC</color>
     <color name="exCardColor">#009688</color>
     <color name="addPicColor">#00BCD4</color>
@@ -12,5 +12,6 @@
     <color name="logoutColor">#F44336</color>
     <color name="boxColor">#937AB6</color>
     <color name="titleColor">#DDDDDD</color>
-
+    <color name="picColor">#FFBB86FC</color>
+    <color name="iconColor">#fff</color>
 </resources>
