--- a/app/src/main/res/drawable-anydpi/ic_expand_less.xml
+++ b/app/src/main/res/drawable-anydpi/ic_expand_less.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
+    android:tint="@color/iconColor"
     android:alpha="0.6">
   <path
       android:pathData="M12,8l-6,6 1.41,1.41L12,10.83l4.59,4.58L18,14z"
