--- a/app/src/main/res/drawable-anydpi/ic_next.xml
+++ b/app/src/main/res/drawable-anydpi/ic_next.xml
@@ -3,7 +3,7 @@
     android:height="60dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
+    android:tint="@color/iconColor"
     android:alpha="0.6">
   <path
       android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"
