--- a/app/src/main/res/drawable-anydpi/ic_next2.xml
+++ b/app/src/main/res/drawable-anydpi/ic_next2.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
+    android:tint="@color/iconColor"
     android:alpha="0.6">
   <path
       android:pathData="M6.23,20.23l1.77,1.77l10,-10l-10,-10l-1.77,1.77l8.23,8.23z"
