--- a/app/src/main/res/drawable-anydpi/ic_previous.xml
+++ b/app/src/main/res/drawable-anydpi/ic_previous.xml
@@ -3,7 +3,7 @@
     android:height="60dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
+    android:tint="@color/iconColor"
     android:alpha="0.6">
   <path
       android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"
