--- a/app/src/main/res/drawable-anydpi/ic_previous2.xml
+++ b/app/src/main/res/drawable-anydpi/ic_previous2.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
+    android:tint="@color/iconColor"
     android:alpha="0.6">
   <path
       android:pathData="M17.77,3.77l-1.77,-1.77l-10,10l10,10l1.77,-1.77l-8.23,-8.23z"
