--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
 
             android:backgroundTint="@color/logoutColor"
             app:icon="@drawable/ic_logout"
+            app:iconTint="@color/iconColor"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginBottom="10dp"
