--- a/app/src/main/res/layout/filter_dialog.xml
+++ b/app/src/main/res/layout/filter_dialog.xml
@@ -54,6 +54,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/action_search"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button4"
@@ -65,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="@string/cancel"
+        android:textColor="@color/white"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/view_spinner"
         app:layout_constraintEnd_toStartOf="@+id/button5"
