--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="titleColor">#636060</color>
     <color name="picColor">#FF6200EE</color>
     <color name="iconColor">#333333</color>
+    <color name="semiblackColor">#1a1a1a</color>
+
 </resources>
