--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_margin="8dp"
         android:layout_marginTop="12dp"
         android:padding="8dp"
-        app:cardBackgroundColor="@color/highlightColor"
+        app:cardBackgroundColor="@color/purp"
         app:cardElevation="10dp"
         app:cardCornerRadius="25dp"
         >
