--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+
+
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#11CFC5</color>
+    <color name="themeColor">#11CFC5</color>
+    <color name="darkTextColor">#020000</color>
+    <color name="contentTextColor">#020000</color>
+    <color name="register_bk_color">#11CFC5</color>
+    <color name="login_bk_color">#fff</color>
+
     <color name="whiteTextColor">#fff</color>
     <color name="white">#fff</color>
     <color name="hintColor">#636060</color>
@@ -14,4 +31,7 @@
     <color name="titleColor">#DDDDDD</color>
     <color name="picColor">#FFBB86FC</color>
     <color name="iconColor">#fff</color>
+    <color name="purple200" tools:ignore="MissingDefaultResource">#3700B3</color>
+    <color name="teal200" tools:ignore="MissingDefaultResource">#03DAC5</color>
+    <color name="surface" tools:ignore="MissingDefaultResource">#121212</color>
 </resources>
