--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,20 +2,24 @@
     <!-- Base application theme. -->
     <style name="Theme.MyGymApp" parent="Base.Theme.MyGymApp">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/highlightColor</item>
-        <item name="colorPrimaryVariant">@color/</item>
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/primaryTextColor</item>
+        <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/primaryTextColor</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSurface</item>
         <!-- Customize your theme here. -->
+        <item name="colorOnBackground">@color/white</item>
+        <item name="colorOnSurface">@color/white</item>
+        <item name="colorOnError">@color/black</item>
+
         <item name="android:fontFamily">@font/google_sans</item>
         <item name="colorSurface">@color/surface</item>
         <item name="android:colorBackground">@color/surface</item>
-
+        <item name="android:colorError">@color/error</item>
     </style>
     <style name="Base.Theme.MyGymApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:forceDarkAllowed" tools:targetApi="q">true</item>
