--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -109,6 +109,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:paddingLeft="10dp"
                     android:id="@+id/recentsRecView"
+                    android:paddingBottom="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
