--- a/app/src/main/res/layout/cycle_list_item.xml
+++ b/app/src/main/res/layout/cycle_list_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/cycleCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/highlightColor"
+        app:cardBackgroundColor="?attr/colorSurface"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp">
 
