--- a/app/src/main/res/layout/home_sections_divider.xml
+++ b/app/src/main/res/layout/home_sections_divider.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
 
-    <View
-        android:elevation="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:background="@color/primaryTextColor"
-        android:layout_height="8dp"
-        android:layout_width="wrap_content"
+<View
 
-        />
+    android:background="@color/black"
+    android:elevation="35dp"
+    android:layout_height="5dp"
 
-</LinearLayout>
+    android:layout_marginTop="10dp"
+    android:layout_width="wrap_content"
+
+    xmlns:android="http://schemas.android.com/apk/res/android" />
+
