--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
         <item name="colorOnSurface">@color/white</item>
         <item name="colorOnError">@color/black</item>
 
-        <item name="colorSurface">@color/surface</item>
+        <item name="colorSurface">@color/purple_200</item>
         <item name="android:colorBackground">@color/surface</item>
         <item name="android:colorError">@color/error</item>
     </style>
