--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,8 @@
             android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:maxLength="20"
+            android:drawableRight="@drawable/ic_baseline_visibility_off_24"
+            android:longClickable="false"
             />
     </LinearLayout>
 
