--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -55,16 +55,11 @@
         android:visibility="visible"
         android:textSize="17sp"/>
 
-    <View xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/secondaryTextColor">
 
-    </View>
+    <include layout="@layout/home_sections_divider"
+
+        />
+
 
     <LinearLayout
         android:minHeight="270dp"
@@ -122,11 +117,11 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/cancelBtn"
                 android:text="@string/cancel_edit"
-                android:textColor="@color/white"
+              
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@color/primaryTextColor"/>
+                android:backgroundTint="?attr/colorSecondary"/>
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/saveBtn"
                 android:text="@string/profile_save"
@@ -135,7 +130,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
-                android:backgroundTint="@color/secondaryTextColor"/>
+                android:backgroundTint="?attr/colorPrimaryVariant"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -153,7 +148,7 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/highlightColor"
+            app:cardBackgroundColor="?attr/colorSurface"
             app:cardCornerRadius="15dp"
             android:id="@+id/userDataBox"
             app:cardElevation="10dp"
@@ -237,14 +232,14 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/editButton"
             app:icon="@drawable/ic_pencil"
-            app:iconTint="@color/iconColor"
+
             app:iconGravity="end"
             android:text="@string/edit_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:backgroundTint="@color/primaryTextColor"
-            android:textColor="@color/white"/>
+            android:backgroundTint="?attr/colorSecondary"
+            />
     </LinearLayout>
 
 
