--- a/app/src/main/res/layout/routine_execution.xml
+++ b/app/src/main/res/layout/routine_execution.xml
@@ -12,9 +12,10 @@
         android:id="@+id/cycleLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/highlightColor"
+        android:background="?attr/colorSurface"
         android:gravity="center"
         android:orientation="vertical"
+        android:elevation="24dp"
         android:padding="5dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -175,7 +176,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="@color/highlightColor"
+        android:background="?attr/colorSurface"
         android:gravity="center"
         android:orientation="horizontal"
 
