--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,7 +74,7 @@
         <item name="android:textSize">17sp</item>
     </style>
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:colorBackground">@color/highlightColor</item>
+        <item name="android:colorBackground">?attr/colorSurface</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="windowActionBar">false</item>
