--- a/app/src/main/res/layout/activity_scheduler.xml
+++ b/app/src/main/res/layout/activity_scheduler.xml
@@ -11,6 +11,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
+        android:gravity="center|center_horizontal"
         android:orientation="vertical">
 
         <TextView
@@ -21,62 +23,9 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
-            android:textStyle="bold"
             android:text="@string/when"
-            android:textSize="18sp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp"
-            >
-
-            <CheckBox
-                android:id="@+id/checkBox_mon"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/monday" />
-
-            <CheckBox
-                android:id="@+id/checkBox_tue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/Tuesday" />
-
-            <CheckBox
-                android:id="@+id/checkBox_wed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/wednesday" />
-
-            <CheckBox
-                android:id="@+id/checkBox_thu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/thursday"
-                />
-
-            <CheckBox
-                android:id="@+id/checkBox_fri"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/friday" />
-
-
-            <CheckBox
-                android:id="@+id/checkBox_sat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/saturday" />
-
-            <CheckBox
-                android:id="@+id/checkBox_sun"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sunday"/>
-        </LinearLayout>
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
 
         <TimePicker
@@ -85,6 +34,16 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:headerBackground="@color/secondaryTextColor" />
+
+
+        <ca.antonious.materialdaypicker.MaterialDayPicker
+            android:id="@+id/day_picker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -102,8 +61,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/logoutColor"
-                android:textColor="@color/white"
-                android:text="@string/cancel" />
+                android:text="@string/cancel"
+                android:textColor="@color/white" />
 
             <View
                 android:layout_width="0dp"
@@ -115,8 +74,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/white"
-                android:text="@string/accept" />
+                android:text="@string/accept"
+                android:textColor="@color/white" />
 
             <View
                 android:layout_width="0dp"
