--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -24,4 +24,5 @@
     <color name="picColor">#FFBB86FC</color>
     <color name="iconColor">#fff</color>
 
+    <color name="dividerColor">@color/black</color>
 </resources>
