--- a/app/src/main/res/layout/home_sections_divider.xml
+++ b/app/src/main/res/layout/home_sections_divider.xml
@@ -2,11 +2,10 @@
 
 <View
 
-    android:background="@color/black"
-    android:elevation="35dp"
-    android:layout_height="5dp"
+    android:background="@color/dividerColor"
+    android:elevation="24dp"
+    android:layout_height="3dp"
 
-    android:layout_marginTop="10dp"
     android:layout_width="wrap_content"
 
     xmlns:android="http://schemas.android.com/apk/res/android" />
