--- a/app/src/main/res/layout/qr_activity.xml
+++ b/app/src/main/res/layout/qr_activity.xml
@@ -7,33 +7,47 @@
     android:orientation="vertical"
     tools:context=".ui.routines.QrActivity">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_qr"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_collapseMode="pin"
-        app:navigationIcon="?attr/homeAsUpIndicator"
-        app:titleTextAppearance="@style/NavigationText"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="center|bottom"
+        android:padding="10dp">
+        <Button
+            android:id="@+id/qr_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="20dp"
+            android:text="back"/>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"/>
+        <Button
+            android:id="@+id/qr_share"
+            android:text="share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="20dp"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/qrRoutineName"
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/qrTitle" />
+        android:padding="4dp"
+        android:text="@string/routine"
+        android:textAppearance="?attr/textAppearanceHeadline4"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/qr_code"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_margin="40dp"/>
 
 </LinearLayout>
