--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -13,31 +13,17 @@
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
 
-
-
     <item
         android:id="@+id/action_filter"
         android:title="@string/order_by"
         android:icon="@drawable/ic_filter"
         app:showAsAction="always">
-
-<!--        <menu>-->
-<!--            <group  android:checkableBehavior="single">-->
-<!--                <item-->
-<!--                    android:id="@+id/date"-->
-<!--                    android:title="@string/date" />-->
-<!--                <item-->
-<!--                    android:id="@+id/score"-->
-<!--                    android:title="@string/score" />-->
-<!--                <item-->
-<!--                    android:id="@+id/difficulty"-->
-<!--                    android:title="@string/difficulty" />-->
-<!--                <item-->
-<!--                    android:id="@+id/category"-->
-<!--                    android:title="@string/category" />-->
-<!--            </group>-->
-<!--        </menu>-->
-
     </item>
+
+    <item
+        android:id="@+id/action_scan_qr"
+        android:title="@string/scan_qr"
+        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
+        app:showAsAction="always"/>
 
 </menu>
