--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -131,7 +131,7 @@
         android:fontFamily="@font/google_sans_bold"
         android:text="@string/register"
         android:textColor="@color/white"
-        android:backgroundTint="@color/secondaryTextColor"
+        android:backgroundTint="#6363fa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password2" />
