--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,22 +2,23 @@
     <!-- Base application theme. -->
     <style name="Theme.MyGymApp" parent="Base.Theme.MyGymApp">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/highlightColor</item>
-        <item name="colorPrimaryVariant">@color/secondaryTextColor</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">#6363fa</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/highlightColor</item>
-        <item name="colorSecondaryVariant">@color/secondaryTextColor</item>
+        <item name="colorSecondary">@color/colorAccent</item>
+        <item name="colorSecondaryVariant">@color/exCardColor</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/google_sans</item>
         <item name="colorOnBackground">@color/white</item>
-        <item name="colorOnSurface">@color/white</item>
+        <item name="colorOnSurface">@color/black</item>
         <item name="colorOnError">@color/black</item>
 
-        <item name="colorSurface">@color/purple_200</item>
+        <item name="colorSurface">@color/highlightColor</item>
         <item name="android:colorBackground">@color/surface</item>
         <item name="android:colorError">@color/error</item>
 
