--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -23,6 +23,7 @@
     <color name="titleColor">#DDDDDD</color>
     <color name="picColor">#FFBB86FC</color>
     <color name="iconColor">#fff</color>
+    <color name="colorNav">#1A1A1A</color>
 
     <color name="dividerColor">@color/black</color>
 </resources>
