--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
 
             android:backgroundTint="#C52441"
             app:icon="@drawable/ic_logout"
-            app:iconTint="@color/iconColor"
+            app:iconTint="@color/white"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginBottom="10dp"
